--- a/src/main/webapp/WEB-INF/i18n/labels/label_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/labels/label_en.properties
@@ -2,6 +2,8 @@ bms.label.login.pageTitle = SBI Login
 bms.label.login.welcome = Welcome
 bms.label.login.CustomerID = Customer ID
 bms.label.login.Password = Password
+bms.label.login.captcha = Enter Captcha
+bms.label.login.captchaWarning = Please Enter the text as shown below in the Image.
 bms.label.login.notMember = Not a member?
 bms.label.login.createAccount = Create Account
 
@@ -33,3 +35,12 @@ bms.label.register.primarySignature = Primary Owner Signature
 bms.label.register.jointSignature = Joint Owner Signature
 bms.label.register.agree = I agree to 
 bms.label.register.conditions = terms & conditions
+
+bms.label.header.bankTitle = SBI
+bms.label.header.greetings = Welcome,
+bms.label.header.accounts = Accounts
+bms.label.header.investment-deposits = Investments & Deposits
+bms.label.header.loans = Loans
+bms.label.header.cards = Cards
+bms.label.header.digital = Digital
+bms.label.header.information-services = Information & Services
