--- a/src/main/webapp/WEB-INF/i18n/buttons/button_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/buttons/button_en.properties
@@ -2,3 +2,7 @@ bms.button.login = Login
 
 bms.button.register.clear = Clear
 bms.button.register = Register
+
+bms.button.transactions.pay = PAY
+bms.button.transactions.deposit = DEPOSIT
+bms.button.transactions.withdraw = WITHDRAW
