--- a/src/main/webapp/WEB-INF/i18n/labels/label_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/labels/label_en.properties
@@ -44,3 +44,22 @@ bms.label.header.loans = Loans
 bms.label.header.cards = Cards
 bms.label.header.digital = Digital
 bms.label.header.information-services = Information & Services
+
+bms.label.accounts.accountsTitle = SBI Home
+bms.label.accounts.checkBalance = Check Balance
+bms.label.accounts.transactions = Transactions
+bms.label.accounts.transactionHistory = Transaction History
+bms.label.accounts.accountNumber = A/C No:
+bms.label.accounts.lastLoginDate = Last Login Date:
+
+bms.label.transactions.transactionsTitle = SBI Transactions
+bms.label.transactions.balance = Balance
+bms.label.transactions.accName = Account Number
+bms.label.transactions.accOwner = Account Owner
+bms.label.transactions.transferTitle = Transfer to Other account
+bms.label.transactions.beneficiary = Beneficiary
+bms.label.transactions.otherAccountsLabel = Other Accounts
+bms.label.transactions.depositLabel = Deposit
+bms.label.transactions.withdrawLabel = Withdraw
+bms.label.transactions.depositTitle = Deposit To Your Account
+bms.label.transactions.withdrawTitle = Withdraw From Your Account
