--- a/src/main/webapp/WEB-INF/i18n/labels/label_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/labels/label_en.properties
@@ -63,3 +63,10 @@ bms.label.transactions.depositLabel = Deposit
 bms.label.transactions.withdrawLabel = Withdraw
 bms.label.transactions.depositTitle = Deposit To Your Account
 bms.label.transactions.withdrawTitle = Withdraw From Your Account
+
+bms.label.transactionHistory.title = SBI Transaction History
+bms.label.transactionHistory.accountNumber = Account Number:
+bms.label.transactionHistory.customerID = Customer ID:
+bms.label.transactionHistory.accountHolder = Account Holder:
+bms.label.transactionHistory.availableBalance = Available Balance:
+
