--- a/src/main/webapp/WEB-INF/i18n/buttons/button_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/buttons/button_en.properties
@@ -6,3 +6,5 @@ bms.button.register = Register
 bms.button.transactions.pay = PAY
 bms.button.transactions.deposit = DEPOSIT
 bms.button.transactions.withdraw = WITHDRAW
+
+bms.button.deposit.depositCalculator = Calculate
