--- a/src/main/webapp/WEB-INF/i18n/labels/label_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/labels/label_en.properties
@@ -70,3 +70,26 @@ bms.label.transactionHistory.customerID = Customer ID:
 bms.label.transactionHistory.accountHolder = Account Holder:
 bms.label.transactionHistory.availableBalance = Available Balance:
 
+bms.label.deposit.title = Deposit
+bms.label.deposit.depositCalculator = Deposit Calculator
+bms.label.deposit.fixedDeposit = Fixed Deposit
+bms.label.deposit.recurringDeposit = Recurring Deposit
+bms.label.deposit.investAmount = Invest Amount
+bms.label.deposit.investmentnotsenior = Enter an amount between 1000/- and 99,99,999/-
+bms.label.deposit.investmentsenior = Enter an amount between 10000/- and 99,99,999/-
+bms.label.deposit.seniorCitizen = Are you a senior citizen?
+bms.label.deposit.seniorYes = Yes
+bms.label.deposit.seniorNo = No
+bms.label.deposit.tenure = Tenure
+bms.label.deposit.tenureYears = Years
+bms.label.deposit.tenureMonths = Months
+bms.label.deposit.tenureDays = Days
+bms.label.deposit.tenureWarnings = Enter a duration between 7 days and 10 years.
+bms.label.deposit.interestAmount = Interest Amount
+bms.label.deposit.perAnnum = per annum
+bms.label.deposit.investmentAmount = Investment Amount
+bms.label.deposit.currencySymbol =  &#8377
+bms.label.deposit.totalInterestAmount = Total Interest Amount
+bms.label.deposit.maturityAmount = Maturity Amount
+bms.label.deposit.hyphen = --
+
